--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <div class="main-content">
       <h1>
-        Apprendre les couleurs <br />
-        a travers les 26 lettres <br />de l'alphabet fr
+        Apprendre les couleurs a travers les
+        <mark style="background: white" ;>26 lettres </mark><br />de l'alphabet
+        <q style="color: blue">francais.</q>
       </h1>
 
       <button id="btn">Clique ici pour apprendre</button>
@@ -19,15 +20,16 @@
         <h4>Apprends avec moi les couleurs</h4>
         <div class="keypress"></div>
         <p>appuie sur une touche pour commencer</p>
-        <h3>
+        <h3 id="title">
           Tu as appuyé sur: <br />
           <br /><span class="color-result"></span>
         </h3>
         <p class="word"></p>
-        <button class="btn2">Voir la definition</button>
+        <button class="btn2">Voir la définition</button>
         <p class="def"></p>
       </div>
     </div>
+    
 
     <script src="app.js"></script>
   </body>
