--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +8,18 @@
   </head>
   <body>
     <div class="main-content">
+      <div id="btn-container">
+        <button id="fr">
+          <img src="/assets/fr.png" alt="countries-flag" />
+        </button>
+        <button id="en">
+          <img src="/assets/gb-eng.png" alt="countries-flag" />
+        </button>
+        <button id="ge">
+          <img src="/assets/de.png" alt="countries-flag" />
+        </button>
+      </div>
+
       <h1>
         Apprendre les couleurs a travers les
         <mark style="background: white" ;>26 lettres </mark><br />de l'alphabet
@@ -29,7 +41,6 @@
         <p class="def"></p>
       </div>
     </div>
-    
 
     <script src="app.js"></script>
   </body>
