--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         </button>
       </div>
 
-      <h1>
+      <h1 id="titleLearn">
         Apprendre les couleurs a travers les
-        <mark style="background: white" ;>26 lettres </mark><br />de l'alphabet
+        <em style="background: white" ;>26 lettres </em><br />de l'alphabet
         <q style="color: blue">francais.</q>
       </h1>
 
       <button id="btn">Clique ici pour apprendre</button>
 
       <div class="content">
-        <h4>Apprends avec moi les couleurs</h4>
+        <h4 id="titleLearn2">Apprends avec moi les couleurs</h4>
         <div class="keypress"></div>
-        <p>appuie sur une touche pour commencer</p>
+        <p id="paraId">appuie sur une touche pour commencer</p>
         <h3 id="title">
           Tu as appuyé sur: <br />
           <br /><span class="color-result"></span>
