--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="main-content">
       <div id="btn-container">
         <button id="fr">
-          <img src="/assets/fr.png" alt="countries-flag" />
+          <img src="./assets/fr.png" alt="countries-flag" />
         </button>
         <button id="en">
-          <img src="/assets/gb-eng.png" alt="countries-flag" />
+          <img src="./assets/gb-eng.png" alt="countries-flag" />
         </button>
         <button id="ge">
-          <img src="/assets/de.png" alt="countries-flag" />
+          <img src="./assets/de.png" alt="countries-flag" />
         </button>
       </div>
 
